--- a/custom_components/sunseeker/translations/de.json
+++ b/custom_components/sunseeker/translations/de.json
@@ -300,6 +300,9 @@
       }
     },
     "switch": {
+			"sunseeker_pause_schedule": {
+				"name": "Pausen Arbeitsplan"
+			},
       "sunseeker_custom_enable": {
         "name": "Benutzerdefinierte Zonen"
       },
