--- a/custom_components/sunseeker/translations/en.json
+++ b/custom_components/sunseeker/translations/en.json
@@ -310,6 +310,9 @@
 
 		},
       "switch": {
+			"sunseeker_pause_schedule": {
+				"name": "Pause schedule"
+			},
 			"sunseeker_custom_enable": {
 				"name": "User defined zones"
 			},
