--- a/custom_components/sunseeker/translations/fi.json
+++ b/custom_components/sunseeker/translations/fi.json
@@ -288,6 +288,9 @@
             }
         },
         "switch": {
+			"sunseeker_pause_schedule": {
+				"name": "Pause schedule"
+			},
             "sunseeker_custom_enable": {
                 "name": "Käyttäjän määrittämät alueet"
             },
